--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:background="@color/bg_color"
     tools:context=".MainActivity">
 
-    <EditText
+    <!--<EditText
         android:id="@+id/editTextName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -63,6 +63,6 @@
         android:text="@string/cancel"
         android:textColor="@color/text_color"
         app:layout_constraintStart_toEndOf="@+id/buttonlogin"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox" />
+        app:layout_constraintTop_toBottomOf="@+id/checkBox" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
