--- a/app/src/main/res/layout/activity_async.xml
+++ b/app/src/main/res/layout/activity_async.xml
@@ -32,8 +32,8 @@
         android:id="@+id/bookInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="201dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="132dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,4 +58,28 @@
         android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleText" />
+
+    <Button
+        android:id="@+id/buttonstart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="59dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="5dp"
+        android:text="Start"
+        android:onClick="ServiceHandler"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonstop"
+        app:layout_constraintEnd_toStartOf="@+id/buttonstop"
+        app:layout_constraintStart_toStartOf="@+id/textViewauthor" />
+
+    <Button
+        android:id="@+id/buttonstop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="80dp"
+        android:layout_marginBottom="113dp"
+        android:text="Stop"
+        android:onClick="ServiceHandler"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
